== Planned

* Enhancements
  * Make Purchases with Cash Withdrawals easier
  * Automatically create a "Transfer" ChargeType when creating a new account.
  * Select Entries to put together as a PDF Report

== 1.8.0

* Enhancements
  * Updated to Rails 3.2.11
  * Updated Thin web server to 1.5.0
  * Updated to Contour 1.1.2 and use Contour pagination theme

* Testing
  * Updated to SimpleCov 0.7.1

== 1.7.0

* Enhancements
  * Mass-assignment attr_accessible and params slicing implemented to leverage Rails 3.2.6 configuration defaults
  * Updating to Contour 1.0.2 and Twitter Bootstrap CSS/JS framework
  * Updating to Ruby 1.9.3-p194
  * Updating to Rails 3.2.6
  * Links with confirm: now use data: { confirm: } to account for deprecations in Rails 4.0

* Bug Fix
  * Entries amounts added with dollar signs, commas, and trailing or leading spaces are now correctly parsed (by LisaM)

== 1.6.0

* Enhancements
  * GUI updated to use contour-minimalist theme

* Refactoring
  * Updated to Rails 3.2.2 and Contour 0.10.2

== 1.5.1

* Bug Fix
  * Arrow keys no longer change the calendar month when focus is on a text input

== 1.5.0

* Enhancements
  * Entries can now be created from the calendar by double clicking on a date

* Refactoring
  * Updated to Rails 3.2.1 and fixed Devise 2.0.0 locales file

* Bug Fix
  * Entry name autocomplete fixed

== 1.4.2

* Bug Fix
  * Devise migrations fixed for Devise 2.0.0

== 1.4.1

* Refactoring
  * Gem dependencies updated:
    * Rails 3.2.0
    * Contour ~> 0.9.3
  * Devise migration and configuration file updated
  * Environment files updated to be in sync with Rails 3.2.0

== 1.4.0

* Enhancements
  * Update to Rails 3.2.0.rc2 and Contour 0.9.0
  * Updated jQuery Calls to use jQuery 1.7 specification (.live to .on)
  * Removed JavaScript functions that are provided by Contour
  * Existing entries can now be copied as templates for new entries

* Refactoring
  * Moved root path to be the entries calendar

* Bug Fix