@@ -1,9 +1,10 @@
 class Entry < ActiveRecord::Base
   attr_accessible :name, :charge_type_id, :billing_date, :decimal_amount, :amount, :description, :charged
 
+  # Concerns
+  include Searchable, Deletable
+
   # Named Scopes
-  scope :current, conditions: { deleted: false }
-  scope :search, lambda { |*args| {conditions: [ 'LOWER(name) LIKE ?', '%' + args.first.downcase.split(' ').join('%') + '%' ] } }
   scope :with_charged, lambda { |*args| { conditions: ["entries.charged = ? or 1 = ?", args.first, args.first]} }
   scope :with_date_for_calendar, lambda { |*args| { conditions: ["DATE(entries.billing_date) >= ? and DATE(entries.billing_date) <= ?", args.first, args[1]]}}
   scope :with_user, lambda { |*args| { conditions: ["user_id IN (?)", args.first] } }
@@ -20,14 +21,6 @@ class Entry < ActiveRecord::Base
 
   def copyable_attributes
     self.attributes.reject{|key, val| ['id', 'billing_date', 'user_id', 'deleted'].include?(key.to_s)}
-  end
-
-  def destroy(real = false)
-    unless real
-      update_attribute :deleted, true
-    else
-      super()
-    end
   end
 
   def charged_amount
