@@ -12,6 +12,11 @@
   * Updated Thin web server to 1.5.0
   * Updated to Contour 1.1.2 and use Contour pagination theme
 
+* Refactoring
+  * Added app/models/concerns
+    * Searchable: Allows models to be searched by name
+    * Deletable: Allows models to be flagged as deleted and scoped by current
+
 * Testing
   * Updated to SimpleCov 0.7.1
 
